--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>OOP Practice</title>
 </head>
 <body>
-   
-   <script src="/script.js"></script>
+   dfdf
+   <script src="script.js"></script>
 </body>
 </html>
