Revert "test-change"
This reverts commit 55954898db10f6c85f5cfa70e7ec019c608ddd83.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>OOP Practice</title>
 </head>
 <body>
-   dfdf
-   <script src="script.js"></script>
+   
+   <script src="/script.js"></script>
 </body>
 </html>
